# Coba

./: .coverage  .env  .env.example  .gitignore  .phase4.txt  .phase5.txt  .phase6.txt  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  TASK.md  dispatch_to_codespace.sh  docker-compose.yml  integrations_build_task.md  mcp_server.py  performance_db.json  pyproject.toml  release.sh  requirements.txt  run_integrations_build.sh  start.sh  start_codespace.sh  test_mcp.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  test.yml
.opencode/: README.md  codespace_pool.json  opencode.jsonc  setup_agents.sh
.opencode/agents/: build.md  fix.md  plan.md  review.md  test.md
.opencode/orchestrator/: vps_orchestrator.sh
.opencode/swarm/: coordinate.sh
benchmarks/: run_benchmarks.py
deploy/: README.md  codespace_cron_restart.sh  failover_monitor.sh  healthcheck_cron.sh  install.sh  logrotate.conf  monitor.sh  ugc-autopipeline.service
docs/: ARCHITECTURE.md  BENCHMARKS.md  DESIGN-SYSTEM.md  INTEGRATIONS.md
scripts/: load_test.py
tests/: test_analytics_collector.py  test_auth.py  test_content_bank.py  test_engagement.py  test_psychology.py  test_scheduler.py
ugc_ai_overpower/: .env.example  .gitignore  .opencode.json  CLAUDE.md  README.md  auth.py  config.yaml  content_bank.db  main.py  performance_db.json  requirements.txt  seed_full_data.py  seed_test_data.py
ugc_ai_overpower/analytics/: engagement.py
ugc_ai_overpower/api/: routes.py
ugc_ai_overpower/browser/: account_guardian.py  bu_agent.py  bu_engage.py  bu_login.py  bu_scraper.py  content_queue.py  cookies.py  farm.py  farm_registrar.py  posters.py  queue_processor.py  social_inbox.py  stealth.py  telegram_commander.py  trend_scout.py
ugc_ai_overpower/cli/: __init__.py  dashboard_launcher.py  output.py
ugc_ai_overpower/core/: affiliate.py  affiliator.py  alerter.py  analytics_collector.py  approval_workflow.py  async_pool.py  auto_pipeline.py  autoheal.py  autoheal_rules.json  brand_profile.py  cache.py  circuit_breaker.py  codespace_pool.py  config.py  content_bank.py  content_bank_v2.py  content_recycler.py  engagement_scraper.py  errors.py  gallery.py  health_monitor.py  logging.py  logging_config.py  mass_production.py  notification_events.py  notifications.py  notion_sync.py  (+12 more)
(+162 files in other folders)
